--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
     <div class="container image">
         <div class="annotate">
             <img src="img/annotated-image-mars.jpg" />
+            <div id="camera" class="dot pink">
+                <a class="close fa fa-times" href="#"></a>
+                <div class="inner">
+                    <h3>SuperCam</h3>
+                    <p>SuperCam is a laser micro-imager and Mastcam-Z is a set of zoomable panoramic cameras.</p>
+                </div>
+           
+                <div id="moxie" class="dot green">
+                 <a class="close fa fa-times" href="#"></a>
+                <div class="inner">
+                    <h3>Moxie</h3>
+                    <p>Makes Oxygen from Martian Carbon Dioxide. This kind of experiment could help scientists devise ways to produce refill oxygen tanks for future astronauts to use when returning from Mars.</p>
+                </div>
+                </div>
+
+            </div>
         </div>
     </div>
     <div class="container">
